Version Next

    - Fix bug where s3b_compress=deflate NDB flag would fail (issue #195)

Version 2.0.2 released July 17, 2022

    - Fixed bugs with the --nbd flag when not also using -f flag (issue #188)
    - Fixed free() of invalid pointer bug in zero_cache.c (issue #191)
    - Added support for zstd compression (pr #187)

Version 2.0.1 released June 4, 2022

    - Fix null pointer dereference bug in zero cache.

Version 2.0.0 released June 4, 2022

    - Support running as a Network Block Device (NBD) server (issue #178)
    - Fix slow write performance with large block sizes since 1.6.0 (issue ##185)
    - Disable MD5 cache by default now that Amazon S3 is consistent (issue #183)
    - Fix bug where "(null)" was appearing in usage message (issue #161)
    - Give more meaningful usage error when size limits are exceeded (issue #162)
    - Added flag "--http11" to restrict cURL to HTTP 1.1 (issue #168)
    - Clean up mount token if FUSE itself fails to start (issue #175)
    - Detect HTTP redirects and emit appropriate hint/warning (issue #174)
    - Added man page reference to Linux bcache (issue #169)
    - Added "--blockCacheFileAdvise" flag (pr #176)
    - Treat 3xx HTTP response codes as errors

Version 1.6.3 released October 2, 2021

    - Fixed bug with `--listBlocks' threads doing redundant overlapping queries
    - Refactor to support multiple different compression algorithms
    - Fixed mutex handling bug in block cache (issue #152)
    - Release mutexs prior to destruction (issue #151)
    - Fixed use-after-free bug in XML parser (pr #154)

Version 1.6.2 released June 14, 2020

    - Require test directory to be absolute unless `-f' flag given (issue #143)
    - Show HTTP error response payload content when `--debug-http' flag given
    - List blocks in the background; added `--listBlocksThreads' (issue #24)
    - Don't let IAM credentials expire while listing blocks (issue #146)